# gpu_2D_detection

./: CMakeLists.txt  cuda_find.cpp
orb/: CMakeLists.txt  cuda_orb.cpp  orb.cpp
sift/: CMakeLists.txt  cuda_sift.cpp  cuda_sift_old.cpp  sift.cpp  sift.h  sift_test.cpp
surf/: CMakeLists.txt  cuda_surf.cpp
surf_sender/: CMakeLists.txt  data_writer.cpp  data_writer.h  surf_sender.cpp
